--- a/public/manifest.json
+++ b/public/manifest.json
@@ -11,7 +11,13 @@
     "contextMenus",
     "storage",
     "http://*/*",
-    "https://*/*"
+    "https://*/*",
+    "cookies",
+    "http://localhost/*",
+    "https://*.codemao.cn/*",
+    "webRequest",
+    "webRequestBlocking",
+    "storage"
   ],
   "icons": {
     "16": "assets/img/16x16.png",
@@ -21,7 +27,7 @@
   },
   "background": {
     "scripts": [
-      "background.js"
+      "background.min.js"
     ],
     "persistent": true
   },
@@ -40,7 +46,7 @@
         "*://*/project/*/interface/api/*"
       ],
       "js": [
-        "content.js"
+        "yapi.min.js"
       ],
       "run_at": "document_start"
     }
