--- a/public/manifest.json
+++ b/public/manifest.json
@@ -2,22 +2,24 @@
   "name": "jstt",
   "description": "json生成typescript类型",
   "homepage_url": "http://chrome.google.com/webstore",
-  "version": "0.0.2",
-  "manifest_version": 2,
+  "version": "0.0.3",
+  "manifest_version": 3,
   "default_locale": "en",
   "minimum_chrome_version": "31",
   "incognito": "split",
   "permissions": [
     "contextMenus",
     "storage",
+    "cookies",
+    "webRequest",
+    "declarativeNetRequest",
+    "storage"
+  ],
+  "host_permissions": [
     "http://*/*",
     "https://*/*",
-    "cookies",
     "http://localhost/*",
-    "https://*.codemao.cn/*",
-    "webRequest",
-    "webRequestBlocking",
-    "storage"
+    "https://*.codemao.cn/*"
   ],
   "icons": {
     "16": "assets/img/16x16.png",
@@ -26,12 +28,9 @@
     "128": "assets/img/128x128.png"
   },
   "background": {
-    "scripts": [
-      "background.min.js"
-    ],
-    "persistent": true
+    "service_worker": "background.min.js"
   },
-  "browser_action": {
+  "action": {
     "default_icon": {
       "16": "assets/img/16x16.png",
       "32": "assets/img/32x32.png",
